src-tauri/tests/snapshots/stream_bridge_events__aborted_event_carries_user_requested_reason.snap
---
source: tests/stream_bridge_events.rs
expression: snapshot
---
line_count: 3
control_events:
  - kind: aborted
    model_id: model-id
    persisted: true
    provider: claude
    reason: user_requested
    resolved_model: test-model
    session_id: provider-session-1
    working_directory: /tmp/winthorpe
final_messages:
  - role: assistant
    id: msg-1
    content_length: 1
    content:
      - type: text
        text: Working on it...
    status:
      type: complete
      reason: stop
    streaming: ~
dropped_event_types: []
