src-tauri/tests/snapshots/stream_bridge_events__deferred_tool_use_terminates_stream_with_pending_state.snap
---
source: tests/stream_bridge_events.rs
expression: snapshot
---
line_count: 3
control_events:
  - kind: deferredToolUse
    model_id: model-id
    permission_mode: default
    provider: claude
    resolved_model: test-model
    session_id: provider-session-1
    toolInput:
      options:
        - a
        - b
      question: Pick one
    toolName: AskUserQuestion
    toolUseId: tool-1
    working_directory: /tmp/winthorpe
final_messages:
  - role: assistant
    id: msg-1
    content_length: 1
    content:
      - type: text
        text: Let me ask you a question.
    status:
      type: complete
      reason: stop
    streaming: ~
dropped_event_types: []
